<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="app_title">My Nanodegree Apps!</string>
    <string name="project1_name">Spotify Streamer</string>
    <string name="project2_name">Scores App</string>
    <string name="project3_name">Library App</string>
    <string name="project4_name">Build It Bigger</string>
    <string name="project5_name">XYZ Reader</string>
    <string name="project6_name">Capstone: My Own App</string>
</resources>
